# google-hash-code-2016

./: CMakeLists.txt  README.md  main.cpp  paint.html  plot.py  stuff.h
input/: learn_and_teach.js  learn_and_teach.out  logo.js  logo.out  right_angle.js  right_angle.out
pratice/: README.md  check.py  main.cpp  plot.py  stuff.h
pratice/input/: learn_and_teach.js
qualif/: CMakeLists.txt  deliver.py  main.cpp
qualif/inputs/: busy_day.in.out  example.in.out  mother_of_all_warehouses.in.out  redundancy.in.out
